<resources>
    <string name="app_name">Stocks</string>
    <string name="server_url">https://stockstore.herokuapp.com/</string>
    <string name="buy">Купить</string>
    <string name="sell">Продать</string>
    <string name="success_buy">Успешно куплено</string>
    <string name="success_sell">Успешно продано</string>
    <string name="transaction_history_title">История транзакций</string>
    <string name="stock_search_title">Акции</string>
    <string name="wrong_code_exception">WrongActivityCodeException(Have you put extra to Intent?)</string>
    <string name="currency">₽</string>
    <string name="pcs">\u0020шт.</string>
    <string name="dots">..</string>
    <string name="arrowDown">↓\u0020</string>
    <string name="arrowUp">↑\u0020</string>
    <string name="no_stocks">Нет купленных акций</string>
    <string name="use_cached">public, max-stale=300</string>
    <string name="ignore_cache">no-cache</string>
    <string name="no_connection">Нет подключения к интернету</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="six_months">6 месяцев</string>
    <string name="year">Год</string>
    <string name="total">Все время</string>
    <string name="stock_title">Акция</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="blurred_password_hint">********</string>
    <string name="login_hint">login123</string>
    <string name="search_hint">Название акции</string>
    <string name="dialog_hint">Количество</string>
    <string name="very_long_space">"                           "</string>
    <string name="long_space">"              "</string>
    <string name="sell_internet_response">sell</string>
    <string name="dot_divider">\u0020•\u0020</string>
    <string name="percent_formatter">(%s%%)</string>
    <string name="create_an_account">Создать аккаунт</string>
    <string name="already_registered">Уже зарегистрированы?</string>
    <string name="sign_in">Войти</string>
    <string name="wrong_auth_data">Неверный логин или пароль</string>
    <string name="name_hint">Иван Иванов</string>
    <string name="name_and_surname">Имя и фамилия</string>
    <string name="user_icon">Иконка пользователя</string>
    <string name="icon_url">public/icons/</string>
    <string name="too_long_number">Слишком большое число</string>
    <string name="stock_count_not_null">Количество акций должно быть больше нуля</string>
    <string name="stock_count_empty">Введите количество акций</string>
    <string name="try_again">Попробовать снова</string>
    <string name="empty_fields">Поля не могут быть пустыми</string>
    <string name="sign_in_again">Войдите заново для продолжения работы</string>
    <string name="not_enough_data">Недостаточно данных за выбранный период</string>
</resources>
