<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_medium"
    android:paddingEnd="@dimen/spacing_medium">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_xxl"
        android:padding="@dimen/spacing_xxl"
        app:srcCompat="@drawable/app_name_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_small"
        android:paddingEnd="@dimen/spacing_small"
        android:text="@string/login"
        android:textAlignment="textStart"
        android:textSize="@dimen/text_size_auth" />

    <EditText
        android:id="@+id/loginInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/negative_spacing_medium"
        android:ems="10"
        android:hint="@string/login_hint"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_small"
        android:paddingEnd="@dimen/spacing_small"
        android:paddingTop="@dimen/spacing_big"
        android:text="@string/password"
        android:textAlignment="textStart"
        android:textSize="@dimen/text_size_auth" />

    <EditText
        android:id="@+id/passInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/negative_spacing_medium"
        android:ems="10"
        android:hint="@string/blurred_password_hint"
        android:inputType="textPassword" />

    <shanshin.gleb.diplom.LoadingButton
        android:id="@+id/progressButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_big"
        android:background="@color/grey"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/switchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_big"
        android:text=""
        android:textAlignment="center" />
</LinearLayout>